--- a/public/404.html
+++ b/public/404.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <link crossorigin="anonymous" media="all"
         rel="stylesheet"
-        href="http://q3gke9sy1.bkt.clouddn.com/css/frameworks.css" />
+        href="http://q3gssxz29.bkt.clouddn.com/css/frameworks.css" />
     <link crossorigin="anonymous" media="all"
-        rel="stylesheet" href="http://q3gke9sy1.bkt.clouddn.com/css/github.css" />
+        rel="stylesheet" href="http://q3gssxz29.bkt.clouddn.com/css/github.css" />
     <meta name="viewport" content="width=device-width">
 
     <title>404 Page not found - GitHub Style</title>
 
-    <link rel="icon" type="image/x-icon" class="js-site-favicon" href="http://q3gke9sy1.bkt.clouddn.com/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" class="js-site-favicon" href="http://q3gssxz29.bkt.clouddn.com/images/favicon.ico">
     <meta name="theme-color" content="#1e2327">
     
 <script type="application/javascript">
@@ -34,7 +34,7 @@ if (!doNotTrack) {
     </span>
     <header class="Header js-details-container Details flex-wrap flex-lg-nowrap p-responsive" role="banner">
         <div class="Header-item d-none d-lg-flex">
-            <a class="Header-link" href="http://q3gke9sy1.bkt.clouddn.com/" aria-label="Homepage"
+            <a class="Header-link" href="http://q3gssxz29.bkt.clouddn.com/" aria-label="Homepage"
                 data-ga-click="Header, go to dashboard, icon:logo">
                 <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1"
                     width="32" aria-hidden="true">
@@ -53,7 +53,7 @@ if (!doNotTrack) {
             </div>
         </div>
         <div class="Header-item Header-item--full flex-justify-center d-lg-none position-relative" style="margin-right: auto;">
-            <a class="Header-link" href="http://q3gke9sy1.bkt.clouddn.com/" aria-label="Homepage"
+            <a class="Header-link" href="http://q3gssxz29.bkt.clouddn.com/" aria-label="Homepage"
                 data-ga-click="Header, go to dashboard, icon:logo">
                 <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1"
                     width="32" aria-hidden="true">
@@ -117,7 +117,7 @@ if (!doNotTrack) {
         </ul>
 
         <a aria-label="Homepage" title="GitHub Style" class="footer-octicon d-none d-lg-block mx-lg-4"
-            href="http://q3gke9sy1.bkt.clouddn.com/">
+            href="http://q3gssxz29.bkt.clouddn.com/">
             <svg height="24" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="24"
                 aria-hidden="true">
                 <path fill-rule="evenodd"
@@ -135,10 +135,10 @@ if (!doNotTrack) {
 </div>
 
 <script crossorigin="anonymous"
-    type="application/javascript" src="http://q3gke9sy1.bkt.clouddn.com/js/frameworks.js"></script>
+    type="application/javascript" src="http://q3gssxz29.bkt.clouddn.com/js/frameworks.js"></script>
 
 <script crossorigin="anonymous" async="async"
-    type="application/javascript" src="http://q3gke9sy1.bkt.clouddn.com/js/github-bootstrap.js"></script>
+    type="application/javascript" src="http://q3gssxz29.bkt.clouddn.com/js/github-bootstrap.js"></script>
 <script>
     let classs = ['pinned-item-desc', 'text-gray', 'text-small', 'd-block', 'mt-2', 'mb-3'];
     const pinned_posts = document.getElementsByName('pinned-post');
