--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@ if (!doNotTrack) {
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="http://q3gssxz29.bkt.clouddn.com/posts/">
                 Posts
                 <span class="Counter hide-lg hide-md hide-sm">
-                    6
+                    7
                 </span>
             </a>
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="http://q3gssxz29.bkt.clouddn.com/about/">
@@ -358,12 +358,12 @@ if (!doNotTrack) {
                                         <path fill-rule="evenodd"
                                             d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
                                     </svg>
-                                    <a href="http://q3gssxz29.bkt.clouddn.com/posts/blog_7niusync/" class="text-bold flex-auto min-width-0 ">
-                                        <span class="repo js-pinnable-item" title="如何使用7牛云同步博客">如何使用7牛云同步博客</span>
+                                    <a href="http://q3gssxz29.bkt.clouddn.com/posts/qa/" class="text-bold flex-auto min-width-0 ">
+                                        <span class="repo js-pinnable-item" title="QA">QA</span>
                                     </a>
                                 </div>
                                 <blockquote>
-<p>使用7牛云进行Blog同步</p>
+<p>一些杂记</p>
 </blockquote>
                                 <div class="f6 text-gray mt-2">
                                     Updated <relative-time datetime="0001-01-01"
